k8s-security-framework/policies/pod-security/KSP-POD-012/tests/boundary-fail-single-condition.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p012-boundary-fail-single-condition
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-negative-additional-boundary-fail
  namespace: p012-boundary-fail-single-condition
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
