k8s-security-framework/policies/pod-security/KSP-POD-012/tests/boundary-partial-capabilities-and-ephemeral-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-partial-and-ephemeral
  namespace: p012-partial-and-ephemeral
spec:
  containers:
  - name: app
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        add:
        - NET_BIND_SERVICE
        drop:
        - ALL
  initContainers:
  - name: init
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        add:
        - NET_BIND_SERVICE
        drop:
        - ALL
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/debug:1.0.0
    command:
    - sh
    targetContainerName: app
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        add:
        - NET_BIND_SERVICE
        drop:
        - ALL
  securityContext:
    runAsNonRoot: false
    seccompProfile:
      type: Localhost
      localhostProfile: profiles/example.json
