k8s-security-framework/policies/pod-security/KSP-POD-012/tests/boundary-pass-additional-edge-case.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p012-boundary-pass-additional-edge-case
  labels:
    policies.ksp.io/mutate-default-security-context: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-boundary-existing-additional-boundary-pass
  namespace: p012-boundary-pass-additional-edge-case
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
