k8s-security-framework/policies/pod-security/KSP-POD-012/tests/boundary-pod-with-existing-security-defaults-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-boundary-existing
  namespace: p012-boundary-pod-with-existing-security-defaults
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
