k8s-security-framework/policies/pod-security/KSP-POD-012/tests/boundary-preserve-explicit-container-settings.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p012-boundary-preserve-explicit-container-settings
  labels:
    policies.ksp.io/mutate-default-security-context: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-boundary-preserve-explicit
  namespace: p012-boundary-preserve-explicit-container-settings
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: true
      readOnlyRootFilesystem: false
      capabilities:
        drop:
        - NET_RAW
