k8s-security-framework/policies/pod-security/KSP-POD-012/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: add-default-security-context-exception
  namespace: security-test
spec:
  policyRefs:
  - name: add-default-security-context
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-pod-012-exception' && object.metadata.namespace
      == 'security-test'
