k8s-security-framework/policies/pod-security/KSP-POD-012/tests/negative-pod-in-namespace-without-opt-in.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p012-negative-pod-in-namespace-without-opt-in
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-negative
  namespace: p012-negative-pod-in-namespace-without-opt-in
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
