k8s-security-framework/policies/pod-security/KSP-POD-012/tests/positive-init-container-missing-defaults-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-positive-init
  namespace: p012-positive-init-container-missing-defaults
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: init
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
