k8s-security-framework/policies/pod-security/KSP-POD-012/tests/positive-opted-in-pod-missing-security-defaults.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p012-positive-opted-in-pod-missing-security-defaults
  labels:
    policies.ksp.io/mutate-default-security-context: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-012-positive
  namespace: p012-positive-opted-in-pod-missing-security-defaults
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
